# yans-2025-hackathon

./: README.md  pyproject.toml
datasets/: hackathon-2025-math-dev.jsonl  hackathon-2025-math-train-rejected-unique.jsonl  hackathon-2025-math-train-rejected.jsonl  hackathon-2025-math-train-unique.jsonl  hackathon-2025-math-train.jsonl  new_chosen.jsonl
notebooks/: YANS-2025-Hackathon-SFT.ipynb  YANS_2025_Hackathon_DPO.ipynb  YANS_2025_Hackathon_SFT.ipynb
src/yans_2025_hackathon/: __init__.py  eval.py  train_dpo.py  train_sft.py
tests/: test_eval.py
